--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,7 @@
         ],
         "rootDir": "src",
         "outDir": "dist",
-        "strict": false,
+        "strict": true,
         "skipLibCheck": true,
         "sourceMap": true
     },
