--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,26 @@
 {
     "name": "client",
     "version": "1.0.0",
-    "main": "index.js",
+    "private": true,
+    "type": "module",
     "scripts": {
-        "build": "tsc -p tsconfig.json",
-        "build:watch": "tsc -w -p tsconfig.json"
+        "dev": "vite",
+        "build": "tsc -p tsconfig.json && vite build",
+        "preview": "vite preview"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "typescript": "^5.9.3"
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
+    },
+    "devDependencies": {
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19.1.7",
+        "@vitejs/plugin-react": "^5.0.0",
+        "typescript": "^5.9.3",
+        "vite": "^7.1.0"
     }
 }
