--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,19 +1,27 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ES2020",
+        "module": "ESNext",
         "moduleResolution": "bundler",
+        "jsx": "react-jsx",
         "lib": [
             "ES2020",
             "DOM"
         ],
-        "rootDir": "src",
-        "outDir": "dist",
         "strict": true,
         "skipLibCheck": true,
-        "sourceMap": true
+        "noEmit": true,
+        "types": [
+            "vite/client"
+        ]
     },
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        }
+    ],
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "src/**/*.tsx"
     ]
 }
