--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "description": "",
     "dependencies": {
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "react-router-dom": "^7.13.0"
     },
     "devDependencies": {
         "@types/react": "^19.1.10",
