--- a/server/package.json
+++ b/server/package.json
@@ -3,25 +3,33 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "concurrently \"node ./node_modules/typescript/bin/tsc -w -p tsconfig.json\" \"node ./node_modules/typescript/bin/tsc -w -p tsconfig.client.json\" \"nodemon dist/index.js\"",
-        "build": "node ./node_modules/typescript/bin/tsc -p tsconfig.json",
-        "start": "node dist/index.js"
+        "start": "node dist/web-server",
+        "dev": "concurrently \"tsc --watch\" \"nodemon dist/web-server\"",
+        "build": "rm -rf dist && tsc",
+        "deploy": "../scripts/deploy.sh"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "express": "^5.2.1",
+        "@fastify/cors": "^11.2.0",
+        "@fastify/sensible": "^6.0.4",
+        "@fastify/static": "^8.1.0",
+        "@fastify/websocket": "^11.0.2",
+        "config": "^4.2.0",
+        "dotenv": "^17.2.3",
+        "fastify": "^5.7.1",
         "nanoid": "^3.3.4",
-        "typescript": "^5.9.3",
+        "pg": "^8.17.1",
         "ws": "^8.19.0"
     },
     "devDependencies": {
-        "@types/express": "^5.0.6",
+        "@types/config": "^3.3.5",
+        "@types/pg": "^8.16.0",
         "@types/ws": "^8.18.1",
         "concurrently": "^9.2.1",
         "nodemon": "^3.1.11",
-        "tsc": "^2.0.4"
+        "typescript": "^5.9.3"
     }
 }
